release: bump version to 0.47.0